bugfix giving channel: remove icon overlap on follow.on: hover

--- a/css/_social.scss
+++ b/css/_social.scss
@@ -136,7 +136,7 @@ close text gets spacing
 		@else {
 			@include breakpoint (adult) {
 				@media screen and (-webkit-min-device-pixel-ratio:0) {
-          background-position: center -4.2%;
+          background-position: center -4.7%;
         }
 				background-position: center -4.4%;
 			}
